
SUFFIXES=.html

.html.c:
	${top_builddir}/scripts/template_gen.pl $<

pkglib_LTLIBRARIES+=fr_xhtml10_arcmonthlist.la
fr_xhtml10_arcmonthlist_la_SOURCES=arcmonthlist.c
fr_xhtml10_arcmonthlist_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_arcmonthlist_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_arcmonths.la
fr_xhtml10_arcmonths_la_SOURCES=arcmonths.c
fr_xhtml10_arcmonths_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_arcmonths_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_arcperthread.la
fr_xhtml10_arcperthread_la_SOURCES=arcperthread.c
fr_xhtml10_arcperthread_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_arcperthread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_arcthread.la
fr_xhtml10_arcthread_la_SOURCES=arcthread.c
fr_xhtml10_arcthread_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_arcthread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_arcthreadlist.la
fr_xhtml10_arcthreadlist_la_SOURCES=arcthreadlist.c
fr_xhtml10_arcthreadlist_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_arcthreadlist_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_arcthreadlist_month.la
fr_xhtml10_arcthreadlist_month_la_SOURCES=arcthreadlist_month.c
fr_xhtml10_arcthreadlist_month_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_arcthreadlist_month_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_arcyearlist.la
fr_xhtml10_arcyearlist_la_SOURCES=arcyearlist.c
fr_xhtml10_arcyearlist_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_arcyearlist_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_arcyears.la
fr_xhtml10_arcyears_la_SOURCES=arcyears.c
fr_xhtml10_arcyears_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_arcyears_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_blank.la
fr_xhtml10_blank_la_SOURCES=blank.c
fr_xhtml10_blank_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_blank_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_cats.la
fr_xhtml10_cats_la_SOURCES=cats.c
fr_xhtml10_cats_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_cats_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_chpass.la
fr_xhtml10_chpass_la_SOURCES=chpass.c
fr_xhtml10_chpass_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_chpass_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_chpassok.la
fr_xhtml10_chpassok_la_SOURCES=chpassok.c
fr_xhtml10_chpassok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_chpassok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_errortpl.la
fr_xhtml10_errortpl_la_SOURCES=errortpl.c
fr_xhtml10_errortpl_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_errortpl_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_fatal.la
fr_xhtml10_fatal_la_SOURCES=fatal.c
fr_xhtml10_fatal_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_fatal_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_forum_begin.la
fr_xhtml10_forum_begin_la_SOURCES=forum_begin.c
fr_xhtml10_forum_begin_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_forum_begin_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_forum_end.la
fr_xhtml10_forum_end_la_SOURCES=forum_end.c
fr_xhtml10_forum_end_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_forum_end_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_forum_posting.la
fr_xhtml10_forum_posting_la_SOURCES=forum_posting.c
fr_xhtml10_forum_posting_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_forum_posting_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_forum_thread.la
fr_xhtml10_forum_thread_la_SOURCES=forum_thread.c
fr_xhtml10_forum_thread_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_forum_thread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_frameset.la
fr_xhtml10_frameset_la_SOURCES=frameset.c
fr_xhtml10_frameset_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_frameset_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_post_ok.la
fr_xhtml10_post_ok_la_SOURCES=post_ok.c
fr_xhtml10_post_ok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_post_ok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_setting.la
fr_xhtml10_setting_la_SOURCES=setting.c
fr_xhtml10_setting_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_setting_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_thread.la
fr_xhtml10_thread_la_SOURCES=thread.c
fr_xhtml10_thread_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_thread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_unreg.la
fr_xhtml10_unreg_la_SOURCES=unreg.c
fr_xhtml10_unreg_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_unreg_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_unregok.la
fr_xhtml10_unregok_la_SOURCES=unregok.c
fr_xhtml10_unregok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_unregok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_updown.la
fr_xhtml10_updown_la_SOURCES=updown.c
fr_xhtml10_updown_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_updown_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_useredit.la
fr_xhtml10_useredit_la_SOURCES=useredit.c
fr_xhtml10_useredit_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_useredit_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_usereditok.la
fr_xhtml10_usereditok_la_SOURCES=usereditok.c
fr_xhtml10_usereditok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_usereditok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_userregister.la
fr_xhtml10_userregister_la_SOURCES=userregister.c
fr_xhtml10_userregister_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_userregister_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_userregok.la
fr_xhtml10_userregok_la_SOURCES=userregok.c
fr_xhtml10_userregok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_userregok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_usersettings.la
fr_xhtml10_usersettings_la_SOURCES=usersettings.c
fr_xhtml10_usersettings_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_usersettings_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_pageentry.la
fr_xhtml10_pageentry_la_SOURCES=pageentry.c
fr_xhtml10_pageentry_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_pageentry_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_xhtml10_section.la
fr_xhtml10_section_la_SOURCES=section.c
fr_xhtml10_section_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_xhtml10_section_la_LDFLAGS=-module -export-dynamic -avoid-version


# eof
